fix: margin on small devices

--- a/src/app/poke-details/poke-details.component.scss
+++ b/src/app/poke-details/poke-details.component.scss
@@ -55,7 +55,7 @@ unknown;
   &__type {
     border-radius: 10px;
     padding: 10px 25px;
-
+    margin-top: 5px;
   }
 
   &__button {
